# blog_src

./: .gitignore  _config.butterfly.yml  _config.yml  config-en.yml  config-zh.yml  hexo-theme-butterfly - 快捷方式.lnk  package-lock.json  package.json  translation-glossary-zh-en.csv
.agents/: hexo-butterfly-english-version-guide.md
.agents/add-hexo-butterfly-multilingual/: SKILL.md
.agents/translate-hexo-post/: SKILL.md
.github/workflows/: deploy.yml
ci_tools/: README.md  check_content_completeness.py  check_front_matter_consistency.py  check_language_coverage.py  check_translation_taxonomy.py  multilingual_front_matter.py  pyproject.toml  test_multilingual_front_matter.py
ci_tools/src/hexo_multilingual_ci/: __init__.py  cli.py  frontmatter.py  glossary.py  markdown.py  models.py  project.py  reporter.py  runner.py
ci_tools/src/hexo_multilingual_ci/checks/: __init__.py  base.py  content.py  coverage.py  frontmatter.py  taxonomy.py
ci_tools/tests/: test_checks.py  test_frontmatter.py  test_legacy_parity.py
scaffolds/: draft.md  page.md  post.md
scripts/: build-multilingual.js  plotly-tag.js
source-en/_posts/: CC_STARTERS_48.md  CF1665C.md  CF1692G.md  CF1695C.md  CF1699C.md  CF1702.md  CF1703.md  CF1705.md  CF1706.md  CF1774C.md  CS144_lab0-3_rec.md  CS144_lab4_rec.md  GAMES101_note1.md  P2867.md  P2944.md  P3087.md  P7995.md  P8095.md  P8187.md  P8269.md  P8270.md  RTNW_note1.md  RTOW_note1.md  RTOW_note2.md  USACO23JAN Find and Replace S.md  complexity_GA.md  dense_neu_net_nmist.md  error_compilation.md  function-call.md  hexo_font_update.md  (+16 more)
(+70 files in other folders)
