[project]
name = "hexo-multilingual-ci"
version = "0.1.0"
description = "Structured multilingual validation for a Hexo blog"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "pyyaml>=6.0.2",
  "rich>=14.0.0",
  "typer>=0.16.0",
]

[project.scripts]
multilingual-ci = "hexo_multilingual_ci.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.16.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
  "types-pyyaml>=6.0.12.20250516",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hexo_multilingual_ci"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src", "tests"]
